feat: implement users api
