# api/server.go
@@ -41,6 +41,8 @@ func NewServer(store db.Store, logger *zap.SugaredLogger) *Server {
 		v.RegisterValidation("currency", validateCurrency)
 	}
 
+	router.POST("/users", server.createUser)
+
 	router.POST("/accounts", server.createAccount)
 	router.GET("/accounts/:id", server.getAccount)
 	router.GET("/accounts", server.listAccounts)
